--- a/it_sint/css/style.css
+++ b/it_sint/css/style.css
@@ -1,20 +1,20 @@
 @font-face {
     font-family: "exo2";
-    src: url("fonts/exo2.otf") format("opentype");
+    src: url("../fonts/exo2.otf") format("opentype");
     font-weight: normal;
     font-style: normal;
    }
 
 @font-face {
     font-family: "exo-20-bold";
-    src: url("fonts/exo-20-bold.ttf") format("truetype");
+    src: url("../fonts/exo-20-bold.ttf") format("truetype");
     font-weight: normal;
     font-style: normal;
    }
 
 @font-face {
     font-family: "exo-light";
-    src: url("fonts/exo-light.otf") format("opentype");
+    src: url("../fonts/exo-light.otf") format("opentype");
     font-weight: normal;
     font-style: normal;
    }
@@ -169,8 +169,12 @@ input[type="file"] {
     transition: all 0.3s;
 }
 
-.bottom-text{
-    color: #00216b !important;
+.custom-form span {
+    color: #fb0e52;
+}
+
+label .bottom-text{
+    color: #00216b;
     font-size: 16px;
     font-family: "exo-light";
     font-weight: bold;
@@ -219,7 +223,6 @@ input[type="file"] {
 
 .item-ancor{
     text-decoration: none;
-    /* width: 383px; */
 }
 
 .go-icon{
@@ -252,8 +255,9 @@ input[type="file"] {
     opacity: 1;
 }
 
-.label-correct{
-    top: -16px !important;
+#CITY-L,
+#PHONE-L{
+    top: -16px;
 }
 
 .icon-go{
@@ -262,7 +266,7 @@ input[type="file"] {
     min-width: 23px;
     max-width: 23px;
     height: 20px;
-    background: url(img/go.png) no-repeat;
+    background: url(../img/go.png) no-repeat;
     background-position: center;
 }
 
@@ -307,10 +311,6 @@ input[type="file"] {
     font-family: "exo-light";
 }
 
-.custom-form span {
-    color: #fb0e52;
-}
-
 .bg-gray{
     background: #ebeff6;
 }
@@ -329,13 +329,13 @@ input[type="file"] {
     -moz-appearance: none;
     appearance: none;
     background-color: #ffffff;
-    background-image: url(img/down-mini_2.png);
+    background-image: url(../img/down-mini_2.png);
     background-repeat: no-repeat;
     background-position: right 10px center;
     font-size: 16px;
 }
 
-.ml-20px{
+form p{
     margin-left: -20px;
 }
 
@@ -456,12 +456,13 @@ input[type="file"] {
   font-size: 23px;
   font-weight: bold;
   color: transparent;
-  background-image: url(img/check-mini.png);
+  background-image: url(../img/check-mini.png);
   background-repeat: no-repeat;
   -webkit-transition: all .2s;
   -o-transition: all .2s;
   transition: all .2s;
 }
+
 /* checked mark aspect changes */
 [type="checkbox"]:not(:checked) + label:after {
   opacity: 0;
@@ -469,6 +470,7 @@ input[type="file"] {
       -ms-transform: scale(0);
           transform: scale(0);
 }
+
 [type="checkbox"]:checked + label:after {
   opacity: 1;
   -webkit-transform: scale(1);
@@ -483,9 +485,11 @@ input[type="file"] {
   border-color: #bbb;
   background-color: #ddd;
 }
+
 [type="checkbox"]:disabled:checked + label:after {
   color: #999;
 }
+
 [type="checkbox"]:disabled + label {
   color: #aaa;
 }
@@ -495,22 +499,21 @@ input[type="file"] {
   border: 1px dotted blue;
 }
 
-/* hover style just for information */
-label:hover:before {
-  border: 1px solid #4778d9!important;
+.custom-form .flex label:hover:before{
+  border: 1px solid #4778d9;
 }
 
-.mb50{
+.wrapper-content .light{
     margin-bottom: 50px;
 }
 
-.style-pagination {
+.swiper-container .swiper-pagination.style-pagination{
     background: #fb0e52;
-    width: 123px !important;
+    width: 123px;
     height: 30px; 
     display: -webkit-box;
     display: -ms-flexbox;
-    display: flex !important;
+    display: flex;
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
@@ -531,7 +534,7 @@ label:hover:before {
     top: 226px;
 }  
 
-.swiper-container-horizontal>.swiper-pagination-bullets .swiper-pagination-bullet {
+.swiper-pagination-bullets .swiper-pagination-bullet{
     width: 9px;
     height: 9px;
     display: inline-block;
@@ -540,10 +543,10 @@ label:hover:before {
     opacity: 0.7;
 } 
 
-.swiper-pagination-bullet-active{
-    width: 12px !important;
-    height: 12.5px !important;
-    opacity: 1 !important;
+.swiper-pagination-bullets .swiper-pagination-bullet-active{
+    width: 12px;
+    height: 12.5px;
+    opacity: 1;
     border-radius: 100%;
 }
 
@@ -567,7 +570,7 @@ label:hover:before {
     margin-left: 530px;
 }
 
-@media screen and (max-width: 1169px){
+@media screen and (max-width: 1170px){
     html{
         padding: 0 21px 0 21px;
     }
@@ -587,8 +590,8 @@ label:hover:before {
             -ms-flex-order: -2;
                 order: -2;
     }
-    .swiper-pagination{
-        display: none !important;
+    .wrapper-content .swiper-container .swiper-pagination{
+        display: none;
     }
 }
 
@@ -648,21 +651,12 @@ label:hover:before {
         max-width: 100%;
         height: auto;
     }
-
     .custom-form{
         width: 100%;
     }
     .custom-form input + label{
         font-size: 13px;
     }
-}
-
-
-@media screen and (max-width: 498px){
-    .label-correct{
-        top: -1px !important;
-    }
-
    .load-desc,
    .button-load{
         width: 100%;
@@ -672,10 +666,8 @@ label:hover:before {
     .custom-file-upload{
         width: 100%;
     }
-
     .gallery{
         padding-left: 10px;
         padding-right: 10px;
     }
-
 }
