--- a/master.css
+++ b/master.css
@@ -152,6 +152,7 @@ button:hover{
       position: relative;
       display: block;
       width: 80%;
+      max-width: 600px;
       height: auto;
       max-height: 705px;
       z-index: 2;
