--- a/master.css
+++ b/master.css
@@ -70,9 +70,17 @@ body{
       top: 38%;
       left: 50%;
       transform: translate(-50%, -50%);
-      color: #c89253;
-      font-size: 68px;
       z-index: 1;
+      font-weight: 800;
+      color: transparent;
+      font-size: 120px;
+      background: url("https://phandroid.s3.amazonaws.com/wp-content/uploads/2014/05/rainbow-nebula.jpg") repeat;
+      background-position: 40% 50%;
+      -webkit-background-clip: text;
+      text-align:center;
+      line-height:90px;
+      height: 130px;
+      user-select: none;
 }
 
 .tagline{
@@ -101,6 +109,7 @@ button{
       text-transform: uppercase;
       letter-spacing: 4px;
       cursor: pointer;
+      font-weight: 800;
 }
 
 button:focus{
@@ -117,7 +126,7 @@ button:hover{
       position: absolute;
       width: 100%;
       height: 100vh;
-      background: #ffa56e;
+      background: #a9ffd3;
       z-index: 1;
       opacity: 0;
 }
@@ -152,6 +161,8 @@ button:hover{
       position: relative;
       display: block;
       width: 80%;
+      max-width: 400px;
+      min-height: 300px;
       max-width: 600px;
       height: auto;
       max-height: 705px;
@@ -175,6 +186,7 @@ button:hover{
 
 .txt p{
       margin-bottom: 20px;
+      font-weight: 800;
 }
 
 .wines button{
@@ -183,7 +195,7 @@ button:hover{
 }
 
 h1{
-      color: #fff;
+      color: #554958;
       font-size: 1.6rem;
       font-weight: 700;
       text-transform: uppercase;
