--- a/farm-razvitie/css/style.css
+++ b/farm-razvitie/css/style.css
@@ -37,8 +37,9 @@ input:focus {
 
 .wrapper-content {
     width: 100%;
-    max-width: 1000px;
+    max-width: 1030px;
     margin: 0 auto;
+    padding: 0 15px;
 }
 
 .flex {
@@ -196,11 +197,109 @@ button {
     bottom: 5px;
 }
 
+.catalog__header{
+    color: #56574c;
+    font-size: 30px;
+    font-weight: 400;
+    line-height: 1.17;
+    margin-bottom: 40px;
+}
+
+.catalog-wrapper{
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-gap: 30px;
+    margin-bottom: 50px;
+}
+
+.catalog-item{
+    transition: .3s;
+    min-height: 560px;
+    display: flex;
+    flex-direction: column;
+}
+
+.catalog-item:hover{
+    transition: .3s;
+    transform: scale(1.05);
+}
+
+.catalog-item-img{
+    background-image: url(../img/3.jpg);
+    background-size: cover;
+    width: 100%;
+    height: 300px;
+    margin-bottom: 20px;
+}
+
+.catalog-item-img.health{
+    background-image: url(../img/4.jpg);
+}
+
+.catalog-item-img.vet{
+    background-image: url(../img/5.jpg);
+}
+
+.catalog-item-img.subs{
+    background-image: url(../img/6.jpg);
+}
+
+.catalog-item-img.gmp{
+    background-image: url(../img/7.jpg);
+}
+
+.catalog-item-img.corm{
+    background-image: url(../img/8.jpg);
+}
+
+.catalog-item-header{
+    font-weight: 800;
+    font-size: 20px;
+    line-height: 1.35;
+    color: #000000;
+    margin-bottom: 10px;
+}
+
+.additional-services{
+    list-style: none;
+}
+
+.additional-services li{
+    color: #56574c;
+    font-size: 16px;
+    font-family: 'FuturaPT';
+    line-height: 1.55;
+    font-weight: 600;
+}
+
+.catalog-button{
+    min-width: 100%;
+    height: 40px;
+    color: #56574c;
+    font-weight: 700;
+    border: 1px solid #675b2d;
+    transition: .3s;
+    background-color: #ffffff;
+    font-size: 16px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-top: auto;
+}
+
+.catalog-button:hover{
+    background-color: #675b2d;
+    color: #ffffff;
+}
+
 footer{
     width: 100%;
     padding-top: 50px;
     padding-bottom: 50px;
     background-color: #222222;
+}
+
+footer .wrapper-content{
+    display: flex;
 }
 
 .footer-item__header{
@@ -248,4 +347,122 @@ footer{
     font-size: 20px;
     font-weight: 400;
     line-height: 1.5;
+}
+
+.burger-menu{
+    display: none;
+}
+
+.mobile-menu{
+    display: none;
+}
+
+@media screen and (max-width: 850px){
+    footer .wrapper-content{
+        display: block;
+    }
+    .footer-item{
+        margin-bottom: 20px;
+        width: 100%;
+    }
+    .header-bottom,
+    .header-top__tel,
+    .header-top__socials{
+        display: none;
+    }
+    .gallery-top__item, 
+    .gallery-top__item img{
+        height: 30vh;
+    }
+    .header-top__main{
+        color: #56574c;
+        font-size: 20px;
+        font-weight: 400;
+    }
+    .header-top{
+        padding-bottom: 20px;
+    }
+    .burger-menu{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        width: 28px;
+        height: 20px;
+    }
+    .burger-menu div{
+        background-color: #56574c;
+        height: 3px;
+        width: 100%;
+    }
+    .mobile-menu{
+        width: 250px;
+        background-color: #f7f6f6;
+        padding: 42px 25px 25px;
+        position: fixed;
+        top: 0px;
+        left: 0px;
+        z-index: 5;
+        height: 100vh;
+    }
+    .mobile-menu.active{
+        display: flex;
+        flex-direction: column;
+    }
+    .close{
+        position: absolute;
+        width: 40px;
+        height: 40px;
+        top: 30px;
+        right: 0px;
+    }
+    .close::before{
+        content: '';
+        position: absolute;
+        background-color: #56574c;
+        width: 24px;
+        height: 2px;
+        transform: rotate(45deg);
+    }
+    .close::after{
+        content: '';
+        position: absolute;
+        background-color: #56574c;
+        width: 24px;
+        height: 2px;
+        transform: rotate(-45deg);
+    }
+    .mobile-nav a{
+        display: block;
+        color: #56574c;
+        font-size: 16px;
+        font-weight: 600;
+        margin-bottom: 15px;
+        text-decoration: none;
+        text-transform: uppercase;
+    }
+    .mobile-bottom{
+        margin-top: auto;
+    }
+    .mob__socials img{
+        width: 30px;
+        height: 30px;
+    }
+    .mob__tel{
+        display: block;
+        color: #56574c;
+        font-size: 16px;
+        line-height: 1.3;
+        font-family: 'FuturaPT';
+        margin-top: 20px;
+        text-decoration: none;
+    }
+    .overlay{
+        background: rgba(247, 246, 246, 0.7);
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0px;
+        left: 0px;
+        z-index: 3;
+    }
 }
