--- a/farm-razvitie/css/style.css
+++ b/farm-razvitie/css/style.css
@@ -132,16 +132,16 @@ button {
 .header-top__tel{
     color: #000000;
     font-size: 20px;
-    line-height: 1.55;
-    font-weight: 400;
+    line-height: 1;
+    font-weight: 600;
     text-decoration: none;
 }
 
 .header-top__main{
     color: #000000;
-    font-size: 40px;
+    font-size: 43px;
     line-height: 1;
-    font-weight: 400;
+    font-weight: 600;
     letter-spacing: 3px;
     text-decoration: none;
     text-transform: uppercase;
@@ -153,8 +153,8 @@ button {
 }
 
 .header-top__socials{
-    width: 167px;
     text-align: center;
+    margin-right: 15px;
 }
 
 .header-bottom{
@@ -170,10 +170,9 @@ button {
 
 .header-bottom a{
     color: #56574c;
-    font-size: 20px;
+    font-size: 23px;
     text-decoration: none;
     line-height: 1.55;
-    font-weight: 400;
     font-weight: 600;
     text-transform: uppercase;
     transition: .3s;
