--- a/farm-razvitie/css/style.css
+++ b/farm-razvitie/css/style.css
@@ -226,6 +226,7 @@ button {
     min-height: 560px;
     display: flex;
     flex-direction: column;
+    text-decoration: none;
 }
 
 .catalog-item:hover{
