--- a/farm-razvitie/css/style.css
+++ b/farm-razvitie/css/style.css
@@ -1,4 +1,3 @@
-
 @font-face {
     font-family: 'FuturaPT';
     src: url('../fonts/FuturaPT-Light.ttf') format('opentype');
@@ -29,8 +28,13 @@ html {
 
 body{
     min-height: 100vh;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
 }
 
 main{
@@ -50,6 +54,10 @@ input:focus {
     max-width: 1030px;
     margin: 0 auto;
     padding: 0 15px;
+}
+
+.wrapper-content.contacts{
+    margin-bottom: 50px;
 }
 
 .flex {
@@ -185,10 +193,14 @@ button {
     line-height: 1.55;
     font-weight: 600;
     text-transform: uppercase;
+    -webkit-transition: .3s;
+    -o-transition: .3s;
     transition: .3s;
 }
 
 .header-bottom a:hover{
+    -webkit-transition: .3s;
+    -o-transition: .3s;
     transition: .3s;
     color: #2f2f2a;
     text-decoration: underline;
@@ -215,6 +227,7 @@ button {
 }
 
 .catalog-wrapper{
+    display: -ms-grid;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     grid-gap: 30px;
@@ -222,16 +235,27 @@ button {
 }
 
 .catalog-item{
+    -webkit-transition: .3s;
+    -o-transition: .3s;
     transition: .3s;
     min-height: 560px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     text-decoration: none;
 }
 
 .catalog-item:hover{
+    -webkit-transition: .3s;
+    -o-transition: .3s;
     transition: .3s;
-    transform: scale(1.05);
+    -webkit-transform: scale(1.05);
+        -ms-transform: scale(1.05);
+            transform: scale(1.05);
 }
 
 .catalog-item-img{
@@ -290,6 +314,8 @@ button {
     color: #56574c;
     font-weight: 700;
     border: 1px solid #675b2d;
+    -webkit-transition: .3s;
+    -o-transition: .3s;
     transition: .3s;
     background-color: #ffffff;
     font-size: 16px;
@@ -311,6 +337,8 @@ footer{
 }
 
 footer .wrapper-content{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 }
 
@@ -370,8 +398,12 @@ footer .wrapper-content{
 }
 
 .about-company{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     margin-bottom: 30px;
 }
 
@@ -412,8 +444,12 @@ footer .wrapper-content{
 }
 
 .item-card{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     margin-bottom: 50px;
 }
 
@@ -447,8 +483,15 @@ footer .wrapper-content{
 }
 
 @media screen and (max-width: 850px){
+    .catalog-wrapper{
+        grid-template-columns: repeat(auto-fill, minmax(290px, 1fr));
+        grid-gap: 0px;
+    }
     .item-card{
-        flex-direction: column-reverse;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: reverse;
+            -ms-flex-direction: column-reverse;
+                flex-direction: column-reverse;
     }
     .item-card__header{
         font-size: 16px;
@@ -486,9 +529,16 @@ footer .wrapper-content{
         padding-bottom: 20px;
     }
     .burger-menu{
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        flex-direction: column;
-        justify-content: space-between;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        -webkit-box-pack: justify;
+            -ms-flex-pack: justify;
+                justify-content: space-between;
         width: 28px;
         height: 20px;
     }
@@ -508,8 +558,13 @@ footer .wrapper-content{
         height: 100vh;
     }
     .mobile-menu.active{
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        flex-direction: column;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
     }
     .close{
         position: absolute;
@@ -524,7 +579,9 @@ footer .wrapper-content{
         background-color: #56574c;
         width: 24px;
         height: 2px;
-        transform: rotate(45deg);
+        -webkit-transform: rotate(45deg);
+            -ms-transform: rotate(45deg);
+                transform: rotate(45deg);
     }
     .close::after{
         content: '';
@@ -532,7 +589,9 @@ footer .wrapper-content{
         background-color: #56574c;
         width: 24px;
         height: 2px;
-        transform: rotate(-45deg);
+        -webkit-transform: rotate(-45deg);
+            -ms-transform: rotate(-45deg);
+                transform: rotate(-45deg);
     }
     .mobile-nav a{
         display: block;
