--- a/pwp/css/legionfarm.webflow.css
+++ b/pwp/css/legionfarm.webflow.css
@@ -889,7 +889,7 @@ h1{
 	}
 }
 
-.frame-img1._2{
+/* .frame-img1._2{
 	background-image:url('../images/Pro-setup.gif');
 }
 
@@ -900,7 +900,7 @@ h1{
 
 .frame-img1._4{
 	background-image:url('../images/Chill-Joy.gif');
-}
+} */
 
 .text-block-2{
 	max-width:440px;
