--- a/pwp/css/legionfarm.webflow.css
+++ b/pwp/css/legionfarm.webflow.css
@@ -835,7 +835,7 @@
    .frame-img1 {
 	 width: 118%;
 	 height: 100%;
-	 background-image: url("https://assets.website-files.com/5fbe6a19e4146e4af7bc00d1/5fbe6a19e4146e3c03bc0116_Play-agressive.gif");
+	 /* background-image: url("https://assets.website-files.com/5fbe6a19e4146e4af7bc00d1/5fbe6a19e4146e3c03bc0116_Play-agressive.gif"); */
 	 background-position: 50% 50%;
 	 background-size: cover;
 	 background-repeat: no-repeat;
