--- a/pwp/css/legionfarm.webflow.css
+++ b/pwp/css/legionfarm.webflow.css
@@ -847,7 +847,7 @@
 	 transform-origin: 0% 100%;
    }
    
-   .frame-img1._2 {
+   /* .frame-img1._2 {
 	 background-image: url("https://assets.website-files.com/5fbe6a19e4146e4af7bc00d1/5fbe6a19e4146e4921bc0105_Pro-setup.gif");
    }
    
@@ -858,7 +858,7 @@
    
    .frame-img1._4 {
 	 background-image: url("https://assets.website-files.com/5fbe6a19e4146e4af7bc00d1/5fbe6a19e4146e6434bc0106_Chill-Joy.gif");
-   }
+   } */
    
    .text-block-2 {
 	 max-width: 440px;
