--- a/pwp/css/legionfarm.webflow.css
+++ b/pwp/css/legionfarm.webflow.css
@@ -1716,7 +1716,7 @@
    .frame-img3 {
 	 width: 118%;
 	 height: 100%;
-	 background-image: url("/images/footer-bg-min.jpg");
+	 background-image: url("../images/footer-bg-min.jpg");
 	 background-position: 0% 50%;
 	 background-size: cover;
 	 background-repeat: no-repeat;
