--- a/pwp/css/legionfarm.webflow.css
+++ b/pwp/css/legionfarm.webflow.css
@@ -5379,3 +5379,15 @@
 	 font-style: normal;
 	 font-display: swap;
    }
+   @font-face {
+	font-family: 'Blinker';
+	font-style: normal;
+	font-weight: 200;
+	src: url(https://fonts.gstatic.com/s/blinker/v4/cIf4MaFatEE-VTaP_OGAdGYmnQ.woff2) format('woff2');
+  }
+  @font-face {
+	font-family: 'Blinker';
+	font-style: normal;
+	font-weight: 300;
+	src: url(https://fonts.gstatic.com/s/blinker/v4/cIf4MaFatEE-VTaP_IWDdGYmnQ.woff2) format('woff2');
+  }
