--- a/pwp/css/legionfarm.webflow.css
+++ b/pwp/css/legionfarm.webflow.css
@@ -3903,7 +3903,7 @@
 	 }
    
 	 .section.ft {
-	   background-image: url("https://assets.website-files.com/5fbe6a19e4146e4af7bc00d1/5fbe6a19e4146eb51cbc013a_footer-bg.jpg");
+	   background-image: url("../images/footer-bg-min.jpg");
 	   background-position: 50% 50%;
 	   background-size: cover;
 	   background-repeat: no-repeat;
