--- a/pwp/css/legionfarm.webflow.css
+++ b/pwp/css/legionfarm.webflow.css
@@ -1350,8 +1350,7 @@
    }
 
    .team-img{
-	   /* position: absolute; */
-	   top: -30%;
+	   margin-top: -20%;
 	   width: 100%;
 	   height: auto;
    }
