--- a/pwp/css/legionfarm.webflow.css
+++ b/pwp/css/legionfarm.webflow.css
@@ -1350,9 +1350,8 @@
    }
 
    .team-img{
-	   margin-top: -20%;
 	   width: 100%;
-	   height: auto;
+	   height: 100%;
    }
    
    .text-block-5 {
