--- a/pwp/css/legionfarm.webflow.css
+++ b/pwp/css/legionfarm.webflow.css
@@ -40,8 +40,8 @@
    .section._1s {
 	 padding-top: 144px;
 	 padding-bottom: 20px;
-	 background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(11, 22, 28, 0.6)), to(rgba(11, 22, 28, 0.6))), url("https://assets.website-files.com/5fbe6a19e4146e4af7bc00d1/5fbe6a19e4146e1133bc010d_MAIN.jpg");
-	 background-image: linear-gradient(180deg, rgba(11, 22, 28, 0.6), rgba(11, 22, 28, 0.6)), url("https://assets.website-files.com/5fbe6a19e4146e4af7bc00d1/5fbe6a19e4146e1133bc010d_MAIN.jpg");
+	 /* background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(11, 22, 28, 0.6)), to(rgba(11, 22, 28, 0.6))), url("https://assets.website-files.com/5fbe6a19e4146e4af7bc00d1/5fbe6a19e4146e1133bc010d_MAIN.jpg");
+	 background-image: linear-gradient(180deg, rgba(11, 22, 28, 0.6), rgba(11, 22, 28, 0.6)), url("https://assets.website-files.com/5fbe6a19e4146e4af7bc00d1/5fbe6a19e4146e1133bc010d_MAIN.jpg"); */
 	 background-position: 0px 0px, 50% 50%;
 	 background-size: auto, cover;
 	 background-repeat: repeat, no-repeat;
@@ -1352,6 +1352,7 @@
    .team-img{
 	   width: 100%;
 	   height: 100%;
+	   max-width: 830px;
    }
    
    .text-block-5 {
