--- a/pwp/css/legionfarm.webflow.css
+++ b/pwp/css/legionfarm.webflow.css
@@ -37,6 +37,10 @@
 	 padding: 160px 40px;
    }
    
+   video{
+	 width: 100%;
+   }
+
    .section._1s {
 	 padding-top: 144px;
 	 padding-bottom: 20px;
